
<resources>
    <string name="app_name">Drawing App</string>
    <string name="line">Line</string>
    <string name="path">Path</string>
    <string name="test">test</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="clear_canvas">Clear Canvas</string>
    <string name="save_image">Save Image</string>
    <string name="settings">Settings</string>
    <string name="toolbar_header_background">toolbar_header_background</string>
    <string name="toolbar_vertical_divisor_image">toolbar_vertical_divisor_image</string>
    <string name="brush_size_icon">bursh_size_icon</string>
    <string name="brush_size_icon_dynamic">brush_size_icon_dynamic</string>
    <string name="thre_dots_for_further_options">thre_dots_for_further_options</string>
    <string name="more_options_card">more_options_card</string>
    <string name="lock_zoom">Lock Zoom</string>
    <string name="load_image">Load Image</string>
    <string name="show_skeleton">Show Skeleton</string>
    <string name="drawing_engine_path">Whole Path</string>
    <string name="drawing_engine_segment">Draw Segment</string>
    <string name="segment_mode">Segment Mode</string>
    <string name="brush">Brush</string>
    <string name="fountain_pen">Fountain Pen</string>
    <string name="ball_pen">Ball Pen</string>

</resources>